--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -160,7 +160,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="CLR"
-            android:onClick="onDigit"/>
+            android:onClick="onClear"/>
         <Button
             android:id="@+id/btnAddition"
             android:layout_width="0dp"
