--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:textSize="48sp"
         android:maxLength="12"
         />
-
+    <!--Row 1-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
 
 
     </LinearLayout>
-
+    <!--Row 2-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -93,7 +93,7 @@
 
 
     </LinearLayout>
-
+    <!--Row 3-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -132,7 +132,7 @@
 
 
     </LinearLayout>
-
+    <!--Row 4-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -171,7 +171,7 @@
 
 
     </LinearLayout>
-
+    <!--Row 5-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
